--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@ fluvial depositional systems- Deutscha and Tranb</li>
  [Apresentação]</p> 
  
  
-                <--! <li> <b>Expositor: </b> Viviana Vargas 
+                <!-- <li> <b>Expositor: </b> Viviana Vargas 
                 
                 </br>
                 <b>Artigo: </b> Conditional Simulation with Patterns - G. Burc Arpat e Jef Caers</li>
